<resources>
    <string name="app_name">Finvest</string>
    <string name="app_name_dev">Finvest Dev</string>
    <string name="action_settings">Settings</string>
    <string name=".password">Konfirmasi Password</string>
    <string name="Zone.month">1 bln</string>
    <string name="android.version">Silahkan update aplikasi anda terlebih dahulu untuk melanjutkan</string>
    <string name="activation.activate">Aktif</string>
    <string name="activation.clue">Kode Aktivasi telah dikirim ke email %s</string>
    <string name="activation.hint">Masukan Kode Aktivasi Anda</string>
    <string name="activation.resend">Kirim Ulang Kode</string>
    <string name="activation.title">Aktivasi Akun</string>
    <string name="add">Tambah</string>
    <string name="add_reminder">Tambah Pengingat</string>
    <string name="address">Alamat</string>
    <string name="address.nsi">Kirana Boutique Office Jalan Kirana Avenue Blok G3 No. 1-2 Kelapa Gading - Jakarta Utara 14240</string>
    <string name="agree">Setuju</string>
    <string name="annually">Tahunan</string>
    <string name="answer">Jawaban</string>
    <string name="amount">Jumlah</string>
    <string name="are_u_sure">Apakah kamu yakin?</string>
    <string name="auto_logout">Auto Logout</string>
    <string name="business.rule.total">Jumlah (Rp)</string>
    <string name="business_rule">Info Produk</string>
    <string name="cancel">Batal</string>
    <string name="cart">Keranjang</string>
    <string name="cart.checkout">Proses Pembelian</string>
    <string name="cart.delete">Hapus</string>
    <string name="cart.error_minimum_amount">Mohon cek nilai transaksi anda tidak kurang dari minimum subscription/topup</string>
    <string name="cart.error_amount_null">Mohon cek nilai transaksi anda</string>
    <string name="cart.error_terms">Sebelum melanjutkan, Silahkan mencentang kotak pernyataan yang menyatakan bahwa anda telah membaca dan memahami isi dari prospektus produk yang akan anda beli</string>
    <string name="cart.error_user_not_verified">Akun anda harus terverifikasi terlebih dahulu</string>
    <string name="cart.terms">Saya telah memahami dan menyetujui isi dari prospektus dan fund fact sheet</string>
    <string name="catalogue.confirm_subscription">Transaksi anda berhasil dimasukkan kedalam cart, apakah anda ingin menampilkannya sekarang?</string>
    <string name="catalogue.diclaimer">Investasi melalui reksa dana mengandung risiko. Calon investor wajib membaca dan memahami prospektus sebelum memutuskan untuk berinvestasi melalui reksa dana. Kinerja masa lalu tidak mencerminkan kinerja di masa mendatang. Laporan ini bersifat informasi dan bukan merupakan suatu penawaran, undangan atau ajakan untuk berinvestasi reksa dana.</string>
    <string name="catalogue.provision">Ketentuan</string>
    <string name="catalogue.act.dialog">Sebelum anda dapat memulai investasi dengan Finvest, silahkan lengkapi data anda terlebih dahulu. Lengkapi sekarang?</string>
    <string name="catalogue.show_more">Selengkapnya</string>
    <string name="catalogue.subscribe_now">Beli</string>
    <string name="catalogue.view_packages">Lihat Produk Lainnya</string>
    <string name="catalogue.dialog.risk.profile">Produk ini mempunyai profil risiko yang lebih tinggi dari profil risiko anda, apakah anda ingin melanjutkan?</string>
    <string name="change.password">Ganti Password</string>
    <string name="checkout.confirm">Konfirm</string>
    <string name="checkout.proceed">Diproses</string>
    <string name="close">Tutup</string>
    <string name="confirm.password">Konfirm Password</string>
    <string name="connection_error">Terjadi kesalahan koneksi</string>
    <string name="connection_error_swipe">Kesalahan Koneksi. Tarik ke bawah untuk mengulang</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="copy">Copy</string>
    <string name="currency">Mata Uang</string>
    <string name="dashboard.my_portfolio">Rangkuman Investasi</string>
    <string name="dashboard.news_feed">Belajar Reksa Dana</string>
    <string name="dashboard.pending_order">Pesanan Anda</string>
    <string name="date_birth">Tanggal Lahir</string>
    <string name="date_id">Tanggal Berlaku KTP</string>
    <string name="day">Hari</string>
    <string name="days">Hari</string>
    <string name="delete">Hapus</string>
    <string name="description">Deskripsi</string>
    <string name="edit">Ubah</string>
    <string name="effective_date">NAB per tanggal</string>
    <string name="email">Email</string>
    <string name="error">Error</string>
    <string name="kyc_penging_error">Akun Anda masih dalam proses verifikasi dari petugas. Mohon hubungi customer service untuk informasi lebih lanjut.</string>
    <string name="exit_apps">Keluar Aplikasi?</string>
    <string name="expired_session">Sesi anda telah berakhir, mohon log in kembali</string>
    <string name="failed">Gagal</string>
    <string name="faq">FAQ</string>
    <string name="fatca.alien">Apakah anda seorang penduduk asing di luar AS?</string>
    <string name="fatca.born">Apakah anda lahir di AS?</string>
    <string name="fatca.citizen">Apakah anda seorang warga negara AS?</string>
    <string name="fatca.current_mailing">Apakah anda memiliki alamat surat AS saat ini (termasuk PO Box AS)?</string>
    <string name="fatca.current_residence">Apakah anda memiliki alamat tempat tinggal di AS saat ini?</string>
    <string name="fatca.definition">FATCA dan CRS adalah suatu Undang-Undang baru yang dikeluarkan untuk membantu mengatasi penggelapan pajak (Tax Evasion)</string>
    <string name="fatca.holdmail">Apakah anda memiliki \"pertanggungan\" alamat atau \"memegang\" alamat yang satu-satunya alamat untuk akun (apakah alamat tersebut di AS atau di AS)?</string>
    <string name="fatca.resident">Apakah anda bertempat tinggal di AS?</string>
    <string name="fatca.signatory">Apakah anda mengeluarkan kuasa atau otoritas penandatangan diberikan kepada seseorang dengan alamat di AS?</string>
    <string name="fatca.telephone">Apakah anda memiliki nomor telefon AS?</string>
    <string name="fatca.transfer">Apakah Anda mengeluarkan instruksi untuk mentransfer dana ke rekening di AS?</string>
    <string name="fatca.universal">Apakah kamu memiliki hubungan finansial dengan Negara Lain?</string>
    <string name="fee">Biaya</string>
    <string name="five.years">5 Y</string>
    <string name="forgot_pwd.clue">Mohon cek email anda setelah mengirim permintaan</string>
    <string name="forgot_pwd.confirm_password">Konfirmasi Password Baru</string>
    <string name="forgot_pwd.email">Masukan Email Anda</string>
    <string name="forgot_pwd.email_phonenumber">Masukkan Email atau Nomor Handphone Anda</string>
    <string name="forgot_pwd.email.email">Masukan Kode Reset</string>
    <string name="forgot_pwd.password">Password Baru</string>
    <string name="forgot_pwd.reset_code">Masukan Kode Reset</string>
    <string name="forgot_pwd.resend_code">Kirim ulang kode</string>
    <string name="forgot_pwd.reset_hint">Silakan masukan kode reset yang dikirimkan ke email atau nomor handphone anda lalu tentukan password baru yang anda inginkan</string>
    <string name="forgot_pwd.otp_code">Masukan kode OTP</string>
    <string name="forgot_pwd.reset">Reset</string>
    <string name="forgot_pwd.security_answer">Jawaban keamanan</string>
    <string name="forgot_pwd.security_question">Pertanyaan keamanan</string>
    <string name="forgot_pwd.subtitle">Jika anda lupa password</string>
    <string name="forgot_pwd.title">Lupa Password</string>
    <string name="forgot_pwd.title_reset">Reset Password</string>
    <string name="fund_alloc.allocation">Alokasi(%)</string>
    <string name="fund_alloc">Pengalokasian</string>
    <string name="fund_alloc.current_unit">Unit</string>
    <string name="fund_alloc.fund_name">Nama Reksadana</string>
    <string name="fund_alloc.inv_manager">Manager Investasi</string>
    <string name="fund_alloc.last_nav">NAB Akhir</string>
    <string name="fund_alloc.market_value">Perkiraan Nilai Pasar</string>
    <string name="fund_alloc.type">Tipe</string>
    <string name="fund_fact_sheet">Fund Fact Sheet</string>
    <string name="detail_trans">Detail Transaksi</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="hello_blank_fragment">Halo fragment kosong</string>
    <string name="history.inv_number">No. Rekening Investasi</string>
    <string name="history.order_number">Nomor Pesanan</string>
    <string name="history.amount">Jumlah</string>
    <string name="history.pay_type">Tipe Pembayaran</string>
    <string name="history.pkg_name">Nama Produk</string>
    <string name="history.time">Waktu</string>
    <string name="history.trx_date">Tanggal Transaksi</string>
    <string name="history.trx_status">Status Transaksi</string>
    <string name="history.trx_type">Tipe Transaksi</string>
    <string name="infortmation">Informasi</string>
    <string name="isi.saldo">Isi Saldo</string>
    <string name="info.copy_to_clipboard">No. akun telah disalin</string>
    <string name="info.copy_to_clipboard_code">Kode Tambah Saldo telah disalin</string>
    <string name="info.copy_to_clipboard_jumlah">Jumlah transfer telah disalin</string>
    <string name="info.copy_to_clipboard_norek">No. Rekening telah disalin</string>
    <string name="update">Update</string>
    <string name="kyc.account_name">Nama pemilik akun</string>
    <string name="kyc.account_number">Nomor rekening</string>
    <string name="kyc.bank">Bank</string>
    <string name="kyc.beneficiary_name">Nama ahli waris</string>
    <string name="kyc.beneficiary_relationship">Hubungan dengan ahli waris</string>
    <string name="kyc.birthdate">Tanggal Lahir</string>
    <string name="kyc.birthplace">Tempat Lahir</string>
    <string name="kyc.branch">Cabang Bank</string>
    <string name="kyc.citizenship">Kependudukan</string>
    <string name="kyc.city_code">Kode Kota</string>
    <string name="kyc.country">Negara</string>
    <string name="kyc.country_code">Kode Negara</string>
    <string name="kyc.customer_email">Email Pelanggan</string>
    <string name="kyc.date">Tanggal</string>
    <string name="kyc.education_background">Latar Belakang Pendidikan</string>
    <string name="kyc.email">Email</string>
    <string name="kyc.employer_name">Nama tempat bekerja</string>
    <string name="kyc.error">Error ketika mencoba mengambil data KYC</string>
    <string name="kyc.first_name">Nama depan</string>
    <string name="kyc.gender">Jenis Kelamin</string>
    <string name="kyc.home_address">Alamat rumah</string>
    <string name="kyc.home_city">Kota</string>
    <string name="kyc.home_country">Negara</string>
    <string name="kyc.home_phone_number">Nomor Telepon</string>
    <string name="kyc.home_postal_code">Kode Pos</string>
    <string name="kyc.home_province">Provinsi</string>
    <string name="kyc.id_exp_date">Tanggal berlaku KTP</string>
    <string name="kyc.id_number">Nomor KTP</string>
    <string name="kyc.id_type">Tipe identitas</string>
    <string name="kyc.investment_experience.other">Pengalaman Berinvestasi Lainnya</string>
    <string name="kyc.investment_experience">Pengalaman Investasi</string>
    <string name="kyc.investment_purpose">Tujuan Investasi</string>
    <string name="kyc.last_name">Nama belakang</string>
    <string name="kyc.legal_address">Alamat</string>
    <string name="kyc.legal_city">Kota</string>
    <string name="min_subscription">Min. Pembelian</string>
    <string name="min_topup">Min. Top Up</string>
    <string name="period_days">Periode (Hari)</string>
    <string name="prospectus">Prospektus</string>
    <string name="redemption_fee">Biaya Penjualan Kembali</string>
    <string name="settlement_pay_off">Batas Waktu Pembayaran</string>
    <string name="settlement_period">Pembayaran Penjualan Kembali (maks.)</string>
    <string name="subscription_fee">Biaya Pembelian</string>
    <string name="transaction_cut_off">Batas Waktu Transaksi</string>
</resources>