<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_double">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_topup"
            android:textColor="@color/red_900" />

        <TextView
            android:id="@+id/txvMinTopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/grey_700"
            tools:text="100.000.000" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_double"
            android:text="@string/transaction_cut_off"
            android:textColor="@color/red_900" />

        <TextView
            android:id="@+id/txvTransactionCutOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/grey_700"
            tools:text="15:00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_double"
            android:text="@string/settlement_pay_off"
            android:textColor="@color/red_900" />

        <TextView
            android:id="@+id/txvSettlementCutOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/grey_700"
            tools:text="18:00" />

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_quadruple"
            android:gravity="right|end|center_vertical"
            android:text="@string/portfolio.topup_agreement"
            android:textColor="@color/grey_700" />

        <Button
            android:id="@+id/btnTupop"
            style="@style/GenericRaisedButtonStyle"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/space_half"
            android:text="@string/portfolio.agree_topup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_quadruple"
            android:text="@string/portfolio.top_up_fee"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/red_900" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/space"
                android:text="@string/amount" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/space"
                android:text="@string/fee" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <LinearLayout
            android:id="@+id/lnrTopUpData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <ProgressBar
            android:id="@+id/prbTopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_half"
            android:indeterminate="true"
            android:indeterminateTint="@color/red_500"
            android:indeterminateTintMode="src_in"
            android:visibility="visible" />


        <!--//-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_quadruple"
            android:text="@string/business_rule"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/red_900" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/space"
                android:text="@string/fund_alloc.fund_name" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/space"
                android:text="@string/prospectus" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/space"
                android:text="@string/fund_fact_sheet" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_400" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <LinearLayout
            android:id="@+id/lnrBusinessRule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <!--//-->
    </LinearLayout>

</ScrollView>